@@ -9,6 +9,7 @@ INCOMPATIBLE CHANGES
   TEZ-1993. Implement a pluggable InputSizeEstimator for grouping fairly
 
 ALL CHANGES:
+  TEZ-2358. Pipelined Shuffle: MergeManager assumptions about 1 merge per source-task.
   TEZ-2342. TestFaultTolerance.testRandomFailingTasks fails due to timeout.
   TEZ-2362. State Change Notifier Thread should be stopped when dag is
   completed
